--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "express": "^4.18.2",
     "joi": "^17.9.1",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.3"
+    "mongoose": "^7.0.3",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "eslint": "^8.36.0",
