correction env.example

--- a/env.example
+++ b/env.example
@@ -1,12 +1,12 @@
-PORT=
-DB_HOST=
-DB_USER=
-DB_PASSWORD=
-DB_NAME=
+PORT=5000
+DB_USER=user-of-database
+DB_PASSWORD=user's-password
+DB_NAME=name-of-database
+DB_HOST=mongodb+srv://${DB_USER}:${DB_PASSWORD}@cluster0.ckkwlpt.mongodb.net/${DB_NAME}?retryWrites=true&w=majority
 
 NODE_ENV=prod
 OR
 NODE_ENV=dev
 
-ACCESS_TOKEN_SECRET=
-REFRESH_TOKEN_SECRET=
+ACCESS_TOKEN_SECRET=secret-word-for-access-token
+REFRESH_TOKEN_SECRET=secret-word-for-refresh-token
