--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.ts",
   "private": true,
   "scripts": {
-    "start": "cross-env NODE_ENV=prod node index.ts",
     "dev": "cross-env NODE_ENV=dev nodemon index.ts",
+    "start": "cross-env NODE_ENV=prod yarn run build && node dist/index.js",
+    "build": "rimraf ./dist && tsc",
     "prettier": "prettier --write .",
     "lint": "eslint **/*.js",
     "lint:fix": "eslint --fix **/*.js",
@@ -61,6 +62,7 @@
     "lint-staged": "^13.2.0",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.7",
+    "rimraf": "^5.0.1",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0"
