--- a/.gitignore
+++ b/.gitignore
@@ -69,7 +69,7 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-.env
+.env, .env.dev
 .env.test
 
 # parcel-bundler cache (https://parceljs.org/)
