--- a/.gitignore
+++ b/.gitignore
@@ -69,7 +69,8 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-.env, .env.dev
+.env
+.env.dev
 .env.test
 
 # parcel-bundler cache (https://parceljs.org/)
